<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/about_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutFragment">


        <ImageView
            android:id="@+id/imageAbout"
            android:layout_width="0dp"
            android:layout_height="192dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_lflewu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/about"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageAbout"
            app:layout_constraintStart_toStartOf="@+id/imageAbout"
            app:layout_constraintTop_toBottomOf="@+id/imageAbout" />

        <TextView
            android:id="@+id/textDescAbout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/about_text"
            app:layout_constraintEnd_toEndOf="@+id/imageAbout"
            app:layout_constraintStart_toStartOf="@+id/imageAbout"
            app:layout_constraintTop_toBottomOf="@+id/textAbout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
